# examine

./: .gitignore  Cargo.toml  README.md  justfile
examples/: cli_tool.rs  simple_usage.rs
src/: detector.rs  frameworks.rs  languages.rs  lib.rs  project_info.rs
