[package]
name = "examine"
version = "0.2.0"
edition = "2021"
description = "Simple project detection and analysis - just pass a path and get project info"
readme = "README.md"
license = "MIT"
authors = ["Kumar Anirudha <chakra@anirudha.dev>"]
repository = "https://github.com/anistark/examine"
homepage = "https://github.com/anistark/examine"
keywords = ["project", "detection", "language", "framework", "analysis", "library"]
categories = ["development-tools", "parsing"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
documentation = "https://docs.rs/examine"
rust-version = "1.70.0"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"
regex = "1.11.1"

[dev-dependencies]
tempfile = "3.20.0"
